--- a/Apps/ShapeUncertainty/CMakeLists.txt
+++ b/Apps/ShapeUncertainty/CMakeLists.txt
@@ -127,7 +127,7 @@ include_directories(${SBGATCORE_INCLUDE_HEADER})
 find_package(Eigen3 3.1.0 REQUIRED)
 include( ${EIGEN3_USE_FILE} )
 
-Find OpenMP
+# Find OpenMP
 find_package(OpenMP)
 if(OPENMP_FOUND)
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
