--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -134,11 +134,11 @@ include_directories(${SBGATCORE_INCLUDE_HEADER})
 add_library(${LIB_NAME} SHARED
 	# source/BatchFilter.cpp
 	source/BBox.cpp
-	source/Bezier.cpp
+	# source/Bezier.cpp
 	# source/BundleAdjuster.cpp
 	source/ControlPoint.cpp
-	source/DynamicAnalyses.cpp
-	source/Dynamics.cpp
+	# source/DynamicAnalyses.cpp
+	# source/Dynamics.cpp
 	source/Element.cpp
 	source/EstimationFeature.cpp
 	source/EstimationFPFH.cpp
@@ -146,7 +146,7 @@ add_library(${LIB_NAME} SHARED
 	source/EstimationPFH.cpp
 	# source/EventFunction.cpp
 	# source/ExtendedKalmanFilter.cpp
-	source/Facet.cpp
+	# source/Facet.cpp
 	source/FeatureMatching.cpp
 	# source/Filter.cpp
 	source/FrameGraph.cpp
@@ -154,11 +154,11 @@ add_library(${LIB_NAME} SHARED
 	source/ICPBase.cpp
 	source/IterativeClosestPoint.cpp
 	source/IterativeClosestPointToPlane.cpp
-	source/IODFinder.cpp
+	# source/IODFinder.cpp
 	source/KDTree.cpp
-	source/KDTreeShape.cpp
-	source/KDTreeControlPoints.cpp
-	source/Lidar.cpp
+	# source/KDTreeShape.cpp
+	# source/KDTreeControlPoints.cpp
+	# source/Lidar.cpp
 	# source/NavigationFilter.cpp
 	# source/Observations.cpp
 	source/PointCloud.cpp
@@ -168,15 +168,15 @@ add_library(${LIB_NAME} SHARED
 	source/PFH.cpp
 	source/PointNormal.cpp
 	source/Psopt.cpp
-	source/Ray.cpp
+	# source/Ray.cpp
 	source/RefFrame.cpp
 	# source/SequentialFilter.cpp
 	# source/ShapeBuilder.cpp
 	# source/ShapeFitterBezier.cpp
 	source/ShapeModel.cpp
-	source/ShapeModelBezier.cpp
-	source/ShapeModelImporter.cpp
-	source/ShapeModelTri.cpp
+	# source/ShapeModelBezier.cpp
+	# source/ShapeModelImporter.cpp
+	# source/ShapeModelTri.cpp
 	source/SPFH.cpp
 	# source/StatePropagator.cpp
 	)
