--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -137,28 +137,28 @@ add_library(${LIB_NAME} SHARED
 	source/Bezier.cpp
 	# source/BundleAdjuster.cpp
 	source/ControlPoint.cpp
-	# source/DynamicAnalyses.cpp
-	# source/Dynamics.cpp
+	source/DynamicAnalyses.cpp
+	source/Dynamics.cpp
 	source/Element.cpp
-	# source/EstimationFeature.cpp
-	# source/EstimationFPFH.cpp
-	# source/EstimationNormals.cpp
-	# source/EstimationPFH.cpp
-	# source/EventFunction.cpp
+	source/EstimationFeature.cpp
+	source/EstimationFPFH.cpp
+	source/EstimationNormals.cpp
+	source/EstimationPFH.cpp
+	source/EventFunction.cpp
 	# source/ExtendedKalmanFilter.cpp
-	# source/Facet.cpp
-	# source/FeatureMatching.cpp
-	# source/Filter.cpp
+	source/Facet.cpp
+	source/FeatureMatching.cpp
+	source/Filter.cpp
 	source/FrameGraph.cpp
-	# source/FPFH.cpp
-	# source/ICPBase.cpp
-	# source/IterativeClosestPoint.cpp
-	# source/IterativeClosestPointToPlane.cpp
-	# source/IODFinder.cpp
+	source/FPFH.cpp
+	source/ICPBase.cpp
+	source/IterativeClosestPoint.cpp
+	source/IterativeClosestPointToPlane.cpp
+	source/IODFinder.cpp
 	source/KDTree.cpp
-	# source/KDTreeShape.cpp
+	source/KDTreeShape.cpp
 	# source/KDTreeControlPoints.cpp
-	# source/Lidar.cpp
+	source/Lidar.cpp
 	# source/NavigationFilter.cpp
 	# source/Observations.cpp
 	source/PointCloud.cpp
@@ -168,17 +168,17 @@ add_library(${LIB_NAME} SHARED
 	source/PFH.cpp
 	source/PointNormal.cpp
 	source/Psopt.cpp
-	# source/Ray.cpp
+	source/Ray.cpp
 	source/RefFrame.cpp
-	# source/SequentialFilter.cpp
+	source/SequentialFilter.cpp
 	# source/ShapeBuilder.cpp
 	# source/ShapeFitterBezier.cpp
 	source/ShapeModel.cpp
 	source/ShapeModelBezier.cpp
-	# source/ShapeModelImporter.cpp
+	source/ShapeModelImporter.cpp
 	source/ShapeModelTri.cpp
 	source/SPFH.cpp
-	# source/StatePropagator.cpp
+	source/StatePropagator.cpp
 	)
 
 # Linking
