cleaned up repository

--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,14 @@
-Apps/ShapeReconstruction/build/
-Apps/ShapeReconstruction/output/
-Apps/Navigation/build/
-Apps/TestPartials/build/
-Apps/TestPartials/patches/
-Apps/TestEllipsoidFitter/build/
-Apps/DebugArma/build/
-Apps/ShapeModelBezier/build/
-Apps/TestBezier/build/
-Apps/RayTracing/build/
-Apps/Uncertainty/build/
-Apps/PatchFitting/build/
-Apps/PatchFitting/output/**
-Apps/TestFilter/build/
-Apps/TestODEint/build/
-Apps/TestICP/build/
-Apps/TestICP/pc/
+
+*output*/
+*input*/
+*build*/
+*pc*/
 
 
 
-
-lib/build/
 *.zip             
 *.pyc
-*.pdf            
-focal_plane_loc.txt             
-volume_dif.txt
-surface_dif.txt           
+*.pdf
+*.obj  
+*.b            
 
