bundle adjustment and IOD back online

--- a/Apps/ShapeReconstruction/CMakeLists.txt
+++ b/Apps/ShapeReconstruction/CMakeLists.txt
@@ -164,8 +164,11 @@ set(library_dependencies
 if (UNIX AND NOT APPLE)
 
 	target_link_libraries(${EXE_NAME} ${library_dependencies})
-else()
+elseif (OPENMP_FOUND)
 	target_link_libraries(${EXE_NAME} ${library_dependencies} OpenMP::OpenMP_CXX)
+
+else()
+	target_link_libraries(${EXE_NAME} ${library_dependencies} )
 
 endif()
 
