Updated inertia coefficients upon elevating degree

--- a/Apps/ShapeModelBezier/CMakeLists.txt
+++ b/Apps/ShapeModelBezier/CMakeLists.txt
@@ -1,4 +1,4 @@
-# CMakeLists.txt for ShapeReconstruction
+# CMakeLists.txt for ShapeUncertainty
 # Benjamin Bercovici, 11/10/2017
 # ORCCA
 # University of Colorado 
@@ -25,7 +25,6 @@ set (OMP_FRIENDLY_GCC_MAJOR_VERSION 7)
 #
 ################################################################################
 
-cmake_minimum_required(VERSION 3.0.0)
 
 if (EXISTS /home/bebe0705/.am_fortuna)
 	set(IS_FORTUNA ON)
@@ -44,6 +43,7 @@ elseif(UNIX AND NOT APPLE)
 	set (VTK_PATH /home/ben/Work/VTK-no-QT/build)
 endif()
 
+cmake_minimum_required(VERSION 3.0.0)
 
 
 if (${USE_GCC})
@@ -67,7 +67,6 @@ if (${CMAKE_MAJOR_VERSION} LESS 3)
 endif()
 
 
-cmake_minimum_required(VERSION ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}.0)
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/source/cmake)
 
 # Compiler flags
@@ -77,9 +76,9 @@ add_definitions(-Wall -O2 )
 
 # Enable C++17 
 if (EXISTS /home/bebe0705/.am_fortuna)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -fext-numeric-literals")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -fext-numeric-literals")
 else()
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 endif()
 
 # Find ASPEN
@@ -145,23 +144,31 @@ endif()
 
 # Add source files in root directory
 add_executable(${EXE_NAME}
-main.cpp)
+	main.cpp)
 
 
 # Linking
 set(library_dependencies
-${ARMADILLO_LIBRARIES}
-${Boost_LIBRARIES}
-${RBK_LIBRARY}
-${OC_LIBRARY}
-${CGAL_LIBRARIES} 
-${CGAL_3RD_PARTY_LIBRARIES}
-${VTK_LIBRARIES}
-${SBGATCORE_LIBRARY}
-${CGAL_interface_LIBRARY}
-${ASPEN_LIBRARY}
-)
+	${ARMADILLO_LIBRARIES}
+	${Boost_LIBRARIES}
+	${RBK_LIBRARY}
+	${OC_LIBRARY}
+	${CGAL_LIBRARIES} 
+	${CGAL_3RD_PARTY_LIBRARIES}
+	${VTK_LIBRARIES}
+	${SBGATCORE_LIBRARY}
+	${CGAL_interface_LIBRARY}
+	${ASPEN_LIBRARY}
+	)
 
+if (UNIX AND NOT APPLE)
 
-target_link_libraries(${EXE_NAME} ${library_dependencies})
+	target_link_libraries(${EXE_NAME} ${library_dependencies})
+elseif (OPENMP_FOUND)
+	target_link_libraries(${EXE_NAME} ${library_dependencies} OpenMP::OpenMP_CXX)
+
+else()
+	target_link_libraries(${EXE_NAME} ${library_dependencies} )
+
+endif()
 
